# Milodex

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: bench_no_trade_spy_v1.yaml  bench_random_matched_exposure_long_dia_v1.yaml  bench_random_matched_exposure_long_gld_v1.yaml  bench_random_matched_exposure_long_iwm_v1.yaml  bench_random_matched_exposure_long_qqq_v1.yaml  bench_random_matched_exposure_long_spy_v1.yaml  bench_random_matched_exposure_long_tlt_v1.yaml  bench_random_matched_exposure_long_xlb_v1.yaml  bench_random_matched_exposure_long_xlc_v1.yaml  bench_random_matched_exposure_long_xle_v1.yaml  bench_random_matched_exposure_long_xlf_v1.yaml  bench_random_matched_exposure_long_xli_v1.yaml  bench_random_matched_exposure_long_xlk_v1.yaml  bench_random_matched_exposure_long_xlp_v1.yaml  bench_random_matched_exposure_long_xlre_v1.yaml  bench_random_matched_exposure_long_xlu_v1.yaml  bench_random_matched_exposure_long_xlv_v1.yaml  bench_random_matched_exposure_long_xly_v1.yaml  bench_time_of_day_null_dia_v1.yaml  bench_time_of_day_null_gld_v1.yaml  bench_time_of_day_null_iwm_v1.yaml  bench_time_of_day_null_qqq_v1.yaml  bench_time_of_day_null_spy_v1.yaml  bench_time_of_day_null_tlt_v1.yaml  bench_time_of_day_null_xlb_v1.yaml  bench_time_of_day_null_xlc_v1.yaml  bench_time_of_day_null_xle_v1.yaml  bench_time_of_day_null_xlf_v1.yaml  bench_time_of_day_null_xli_v1.yaml  bench_time_of_day_null_xlk_v1.yaml  bench_time_of_day_null_xlp_v1.yaml  bench_time_of_day_null_xlre_v1.yaml  bench_time_of_day_null_xlu_v1.yaml  bench_time_of_day_null_xlv_v1.yaml  bench_time_of_day_null_xly_v1.yaml  bench_unconditional_intraday_long_dia_v1.yaml  bench_unconditional_intraday_long_gld_v1.yaml  bench_unconditional_intraday_long_iwm_v1.yaml  bench_unconditional_intraday_long_qqq_v1.yaml  bench_unconditional_intraday_long_spy_v1.yaml  (+110 more)
configs/risk_profiles/: aggressive.yaml  conservative.yaml  standard.yaml
docs/: BENCH_BOUNDARY.md  CLI_UX.md  CURRENT_ROADMAP.md  DESIGN.md  DESIGN_SYSTEM.md  DISTRIBUTION.md  ENGINEERING_STANDARDS.md  FOUNDER_INTENT.md  FRONTEND_FRAMEWORK_AUDIT_2026-06-20.md  GRILL_DECISIONS_2026-06-18.md  INSTALL.md  INTRADAY_ETF_EVIDENCE_HARDENING.md  INTRADAY_ETF_EVIDENCE_HARDENING_FEEDBACK.md  INTRADAY_ETF_EVIDENCE_PHASE2_COMPLETE.md  INTRADAY_ETF_EVIDENCE_PHASE2_ORCHESTRATION_BRIEF.md  INTRADAY_ETF_EVIDENCE_PHASE2_TIER1_GATE.md  KNOWN_FLAKY_TESTS.md  LAUNCH_READINESS.md  OPERATIONS.md  PAPER_WORKFLOW.md  PHASE2_PLANNING.md  PHASE3_PLANNING.md  PHASE4_PLANNING.md  PHASE5_PLANNING.md  PHASE6_BENCH_PREP.md  PHASE6_OPERATOR_KANBAN_PREP.md  PRODUCT.md  PROMOTION_GOVERNANCE.md  README.md  REPORTING.md  REQUIREMENTS_COVERAGE.md  REQUIREMENTS_OPEN_QUESTIONS.md  RISK_POLICY.md  ROADMAP_PHASE1.md  SRS.md  STRATEGY_BANK.md  TEST_EFFICACY_AUDIT.md  TROUBLESHOOTING.md  VISION.md  strategy-families.md
docs/adr/: 0001-alpaca-as-broker.md  0002-parquet-as-cache.md  0003-config-driven-strategies.md  0004-paper-only-phase-one.md  0005-kill-switch-manual-reset.md  0006-abc-pattern-for-external-integrations.md  0007-argparse-for-cli.md  0008-risk-layer-veto-architecture.md  0009-promotion-pipeline-stage-model.md  0010-hybrid-source-of-truth.md  0011-sqlite-event-store.md  0012-runtime-and-dual-stop.md  0013-market-orders-only-phase-one.md  0014-cli-formatter-abstraction.md  0015-strategy-identifier-and-frozen-manifest.md  0016-phase1-instrument-whitelist.md  0017-data-source-hierarchy.md  0018-durable-state-directory-consolidation.md  0019-risk-types-belong-in-risk-module.md  0020-promotion-thresholds-are-code-invariants.md  0021-strategies-read-own-trade-ledger.md  0021-walk-forward-metrics-are-oos-aggregate.md  0022-strategy-rotation-scope-is-the-declared-universe.md  0023-phase-1-is-closed-and-phase-2-may-open.md  0024-account-scoped-position-caps-are-authoritative.md  0025-phase-2-is-closed-and-phase-3-may-open.md  0026-concurrent-multi-strategy-uses-per-process-supervisor.md  0027-phase-3-is-closed-and-phase-4-may-open.md  0028-phase-4-scope-closes-as-cleanup-and-attribution.md  0028-stage-aware-promotion-gate.md  0029-per-strategy-position-attribution-at-risk-layer.md  0030-backtest-is-exploratory-manifest-binds-at-paper-plus.md  0031-phase-4-is-closed-and-phase-5-may-open.md  0032-audit-trail-backfill-policy.md  0033-gui-runtime-is-pyside6-qt-quick.md  0034-phase-5-scope-orders-observability-before-features.md  0035-design-system-and-theme-architecture.md  0036-operator-kanban-surface-for-promotion-pipeline.md  0037-distribution-model-pyinstaller-onedir-plus-inno-setup-unsigned.md  0038-phase-5-is-closed-and-phase-6-may-open.md  (+27 more)
docs/architecture/: 2026-05-30-harness-capability-axes.md  2026-06-13-cross-process-submit-serialization-design.md
docs/assurance/: D6_QUEUED_INTENT_EVIDENCE_MATRIX.md
docs/audits/: 2026-06-29-weekly-audit.md  2026-07-17-ponytail-audit.md
docs/bench/: README.md
docs/drills/: 2026-07-11-founder-gui-walk-script.md  2026-07-11-m4-drill-matrix.md  2026-07-24-founder-gui-walk-script.md
docs/incidents/: 2026-05-29-runner-fleet-oom-freeze.md
docs/mockups/: README.md  bench-brief.md  bench-pr-h-manual-notes.md  bench-surface.html
docs/overnight/: DECISION_LAYER_SEAM_PROOF_AAR.md  DECISION_LAYER_SEAM_PROOF_BRIEF.md  INTRADAY_STRATEGY_EXPANSION_AAR.md
docs/reviews/: 2026-04-14-ui-state-review.md  2026-04-22-phase1-architecture-health.md  2026-04-29-runner-startup-investigation.md  2026-05-06-manifest-drift-toctou-race.md  2026-05-19-orphan-reconcile-pid-reuse-defect.md  2026-05-24-rm-006-daily-cross-sectional-thermo-nuclear-review.md  README.md  (+48 more)
installer/: build_installer.ps1  milodex.iss  milodex.spec  milodex_launcher.py
scripts/: README.md  audit_phase_state.py  audit_requirements_coverage.py  backfill_pullback_rsi2_audit_gap.py  capture_bench_interactive.py  capture_gui_screenshots.py  counterfactual_gate.py  eod_review.py  livefire_probe.py  oneshot_launch_fleet.cmd  reconcile_yesterday_backtest_orphans.py  run_mutation_audit.ps1
tests/: conftest.py
(+546 files in other folders)
