[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milodex"
version = "0.1.0"
description = "A personal, research-led trading system that discovers, validates, deploys, and monitors strategies."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # alpaca-py: broker SDK on the LIVE-TRADE path. Deliberately left unbounded —
    # capping it has trade-correctness implications and is an OPERATOR decision,
    # not an autonomous dependency bound (flagged for operator review 2026-06-21).
    "alpaca-py>=0.35.0",
    # Core numeric stack — capped at the next (currently unreleased) major. The
    # project is tested on numpy 2.x / pandas 3.x / pyarrow 24.x (the versions a
    # fresh `pip install` resolves today: numpy 2.5.0, pandas 3.0.3, pyarrow
    # 24.0.0); these caps block an untested numpy 3 / pandas 4 / pyarrow 25 from
    # silently landing on a fresh install or CI. Full suite + a pandas-3/numpy-2
    # forward-compat audit verified clean 2026-06-21. numpy is declared explicitly
    # because src imports it directly (intraday_simulation, bench_random_matched_exposure_long).
    "numpy>=2.0,<3",
    "pandas>=2.0,<4",
    "pyarrow>=15.0,<25",
    "PySide6>=6.6,<7",
    # Next-major caps below allow the versions a fresh install resolves today
    # (python-dotenv 1.2.2, PyYAML 6.0.3, rich 15.0.0) and block an untested next
    # major from silently landing on a fresh install / CI. pytz is CalVer, so a
    # "major" cap is not meaningful — left uncapped by design.
    "python-dotenv>=1.0,<2",
    "pytz>=2024.1",
    "PyYAML>=6.0,<7",
    "rich>=13.7,<16",
    # yfinance: lightweight Yahoo Finance client used exclusively to fetch ^VIX
    # history for the market tape.  Alpaca free tier does not ship VIX (it is a
    # CBOE index, not an equity), so Yahoo is the only viable free path.  The
    # client crossed 0.2 -> 1.x; the VIX path is tested on 1.4.x, so floor at the
    # tested 1.4 series and cap <2 to block an untested 2.0 on this fragile path.
    "yfinance>=1.4,<2",
]

[project.scripts]
milodex = "milodex.cli.main:main"

[project.optional-dependencies]
dev = [
    # Dev tooling capped at the next major. Caps allow the versions a fresh
    # install resolves today (ruff 0.15.x, pytest 9.1.x, pytest-cov 7.1.x,
    # pytest-xdist 3.8.x) and block an untested bump from breaking CI silently.
    # ruff is pre-1.0 and adds lint rules on MINOR bumps, so it is pinned to the
    # in-use 0.15 line — a new minor must be adopted deliberately, not auto-pulled.
    "ruff>=0.15,<0.16",
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    # Parallel test execution. The full suite is ~6min serial, but the cost is
    # spread across a long tail of tests (top 30 are only ~34% of wall-clock),
    # so parallelism — not deleting slow tests — is the speed lever. Worker cap
    # rationale lives in [tool.pytest.ini_options] addopts below.
    "pytest-xdist>=3,<4",
    # Mutation testing (test-efficacy audit). Pinned to the 2.x line because 3.x
    # refuses to run on native Windows (boxed/mutmut#397) and the operator's
    # primary dev environment is Windows. See docs/TEST_EFFICACY_AUDIT.md.
    "mutmut>=2.4,<3",
    # Frozen-bundle packaging (ADR 0037). Used by installer/build_installer.ps1;
    # not invoked by pytest. Install with: pip install -e ".[dev]"
    "pyinstaller>=6.6,<7",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Parallelise by default (pytest-xdist). ``auto`` scales to the host core count;
# ``--maxprocesses`` caps it because each PySide6/Qt GUI worker holds ~1.5GB and
# a few GUI tests spawn their own subprocess — uncapped ``auto`` on a 20-core box
# OOMs 32GB of RAM. Capped at 8: full suite 6m16s -> ~1m50s locally, and = 4 on
# CI's 4-vCPU windows-latest runner (memory-safe at 16GB; coverage combines
# correctly across workers). For tight single-test loops, disable with ``-n0``.
addopts = ["-n", "auto", "--maxprocesses=8"]
markers = [
    "integration: marks tests that hit real APIs (deselect with '-m \"not integration\"')",
    "flaky_qt_pollution: pre-existing process-global Qt/QML subprocess pollution; passes in isolation, flakes only in full-suite (tracked, not caused by Trading Desk work)",
]

# Coverage ratchet (R-XC-016 sister item / ROADMAP_PHASE1.md §7).
#
# Run `pytest --cov=src/milodex --cov-report=term-missing` to enforce.
# `fail_under` is intentionally not in pytest addopts so subset runs
# (e.g. `pytest tests/milodex/strategies/`) don't false-fail on a
# partial test slice. Rule: when overall coverage rises sustainably to
# `fail_under + 2` or above, raise `fail_under` by 1 in the same commit
# that achieves the rise. This is a one-way ratchet — never lower.
[tool.coverage.run]
source = ["src/milodex"]
branch = false
omit = [
    "src/milodex/core/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 89
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
