[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milodex"
version = "0.1.0"
description = "A personal, research-led trading system that discovers, validates, deploys, and monitors strategies."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "alpaca-py>=0.35.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "PySide6>=6.6,<7",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "rich>=13.7",
    # yfinance: lightweight Yahoo Finance client used exclusively to fetch ^VIX
    # history for the market tape.  Alpaca free tier does not ship VIX (it is a
    # CBOE index, not an equity), so Yahoo is the only viable free path.
    "yfinance>=0.2",
]

[project.scripts]
milodex = "milodex.cli.main:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    # Parallel test execution. The full suite is ~6min serial, but the cost is
    # spread across a long tail of tests (top 30 are only ~34% of wall-clock),
    # so parallelism — not deleting slow tests — is the speed lever. Worker cap
    # rationale lives in [tool.pytest.ini_options] addopts below.
    "pytest-xdist",
    # Mutation testing (test-efficacy audit). Pinned to the 2.x line because 3.x
    # refuses to run on native Windows (boxed/mutmut#397) and the operator's
    # primary dev environment is Windows. See docs/TEST_EFFICACY_AUDIT.md.
    "mutmut>=2.4,<3",
    # Frozen-bundle packaging (ADR 0037). Used by installer/build_installer.ps1;
    # not invoked by pytest. Install with: pip install -e ".[dev]"
    "pyinstaller>=6.6,<7",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Parallelise by default (pytest-xdist). ``auto`` scales to the host core count;
# ``--maxprocesses`` caps it because each PySide6/Qt GUI worker holds ~1.5GB and
# a few GUI tests spawn their own subprocess — uncapped ``auto`` on a 20-core box
# OOMs 32GB of RAM. Capped at 8: full suite 6m16s -> ~1m50s locally, and = 4 on
# CI's 4-vCPU windows-latest runner (memory-safe at 16GB; coverage combines
# correctly across workers). For tight single-test loops, disable with ``-n0``.
addopts = ["-n", "auto", "--maxprocesses=8"]
markers = [
    "integration: marks tests that hit real APIs (deselect with '-m \"not integration\"')",
    "flaky_qt_pollution: pre-existing process-global Qt/QML subprocess pollution; passes in isolation, flakes only in full-suite (tracked, not caused by Trading Desk work)",
]

# Coverage ratchet (R-XC-016 sister item / ROADMAP_PHASE1.md §7).
#
# Run `pytest --cov=src/milodex --cov-report=term-missing` to enforce.
# `fail_under` is intentionally not in pytest addopts so subset runs
# (e.g. `pytest tests/milodex/strategies/`) don't false-fail on a
# partial test slice. Rule: when overall coverage rises sustainably to
# `fail_under + 2` or above, raise `fail_under` by 1 in the same commit
# that achieves the rise. This is a one-way ratchet — never lower.
[tool.coverage.run]
source = ["src/milodex"]
branch = false
omit = [
    "src/milodex/core/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 89
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
